--- a/app/main.css
+++ b/app/main.css
@@ -22,11 +22,11 @@ td {
 .weekend{
 	color: red;
 	font-weight: bold;
-	background-color: beige;
+	background-color: #FDFDFD;
 }
 
 .weekday {
-	background-color: #FDFDFD;
+	background-color: white;
 }
 
 .bookend {
